REFACTOR: more clean,,